Create Account page

--- a/client/checkout.html
+++ b/client/checkout.html
@@ -3,36 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Signup</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Checkout</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body id="body">
     <header class="header" id="header">
-        <div class="container-fluid" id="c1">
+        <div class="container-fluid" id="cf-1">
             <div class="container" id="c-1a">
-                    <h1 id="h1">LOGO</h1>
+                <img src="" alt="logo">
             </div>
             <div class="container" id="c-1b">
-                <p>Tagline</p>
+                <nav id="nav">
+                    <li id="l">Home</li>
+                    <li id="l">Suport</li>
+                    <li id="l">Locations</li>
+                    <li id="l">Checkout</li>
+                </nav>
             </div>
         </div>
-    </header>    
-    <div class="container-fluid" id="c2">
+    </header>
+    <div class="container-fuid" id="cf-2">
         <div class="container" id="c-2a">
-            <h1>Login</h1>
-            <form action="" method="post"></form>
-        </div>
-        <div class="container-fluid" id="c-2b">
-            <h1>Signup</h1>
+            
         </div>
     </div>
-    <footer class="footer" id="footer">
-        <div class="container" id="f1">
-            <p>
-                COPYRIGHT &copy; | 2024 PRODUCTION
-            </p>
-        </div>
-    </footer>
 </body>
 </html>
