create new files go,login,logo,js

--- a/client/account.html
+++ b/client/account.html
@@ -15,11 +15,11 @@
             </div>
             <div class="container" id="c-2">
                 <nav id="nav">
-                    <p id="navlink"><a href="" id="nav-link">Home</a></p>
-                    <p id="navlink"><a href="" id="nav-link">Support</a></p>
-                    <p id="navlink"><a href="" id="nav-link">Checkout</a></p>
+                    <p id="navlink"><a href="index.html" id="nav-link">Home</a></p>
+                    <p id="navlink"><a href="login.html" id="nav-link">Support</a></p>
+                    <p id="navlink"><a href="checkout.html" id="nav-link">Checkout</a></p>
                     <p id="navlink"><a href="" id="nav-link">Location</a></p>
-                    <p id="navlink"><a href="" id="nav-link">My Account</a></p>
+                    <p id="navlink"><a href="account.html" id="nav-link">My Account</a></p>
                 </nav>
             </div>
         </div>
@@ -30,7 +30,9 @@
             <div class="credentials" id="creds">
                 <ul id="ul">
                     <p id="crd">Name:</p>
+                    <p id="crd">Age:</p>
                     <p id="crd">Mobile:</p>
+                    <p id="crd">Email Address:</p>
                     <p id="crd">Password:</p>
                     <p id="crd"><button class="btn btn-success">History</button></p>
                     <p id="crd"><button class="btn btn-warning">Bookmarks</button></p>
