--- a/client/index.html
+++ b/client/index.html
@@ -9,16 +9,23 @@
 </head>
 <body id="body">
     <header class="header" id="header">
-        <div class="container-fluid" id="c1">
-            <div class="container" id="c-1a">
-                    <h1 id="h1">LOGO</h1>
+        <div class="container-fluid" id="cf-1">
+            <div class="container" id="c-1">
+                <p id="logo">Mtaani</p>
             </div>
-            <div class="container" id="c-1b">
-                <p>Tagline</p>
+            <div class="container" id="c-2">
+                <nav id="nav">
+                    <p id="navlink"><a href="index.html" id="nav-link">Home</a></p>
+                    <p id="navlink"><a href="login.html" id="nav-link">Support</a></p>
+                    <p id="navlink"><a href="checkout.html" id="nav-link">Checkout</a></p>
+                    <p id="navlink"><a href="" id="nav-link">Location</a></p>
+                    <p id="navlink"><a href="account.html" id="nav-link">My Account</a></p>
+                </nav>
             </div>
         </div>
-    </header>    
-    <div class="container-fluid" id="c2">
+        <hr>
+     </header>
+    <!-- <div class="container-fluid" id="c2">
         <div class="container" id="c-2a">
             <h1>Login</h1>
             <form action="" method="post"></form>
@@ -33,6 +40,6 @@
                 COPYRIGHT &copy; | 2024 PRODUCTION
             </p>
         </div>
-    </footer>
+    </footer> -->
 </body>
 </html>
